--- a/win_file_version.xcodeproj/xcshareddata/xcschemes/win_file_version.xcscheme
+++ b/win_file_version.xcodeproj/xcshareddata/xcschemes/win_file_version.xcscheme
@@ -31,7 +31,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -52,7 +52,7 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-sfv"
+            argument = "-fv"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
